--- a/smart-farm-frontend/src/index.html
+++ b/smart-farm-frontend/src/index.html
@@ -47,4 +47,5 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"
   ></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 </html>
